- test github action

--- a/.env.sample
+++ b/.env.sample
@@ -19,4 +19,4 @@ NEXUS_QA_READ_CRED=********
 EVENTS_PROD_DOMAIN=http://example.com
 EVENTS_STAGING_DOMAIN=http://example.com
 EVENTS_SUBDOMAIN=subdomain
-FEATURES="telio drop"
+FEATURES=telio drop
