--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,23 +6,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Go 1.20
+      -
+        name: Checkout        
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      -
+        name: Setup GO
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20.x'
-      - name: Setup latest rust
-        run:
-          - curl https://sh.rustup.rs -sSf | sh
-      - name: Install depency
-        run:
-          - apt install -y libxml2-dev gcc iptables          
-      - name: Install mage
-        run: 
-          - git clone https://github.com/magefile/mage
-          - cd mage
-          - go run bootstrap.go
-          - cd ..
-          - rm -rf mage          
-          - cp .env.sample .env
-          - mage build:binaries
-        
+          go-version: 1.20
+      -
+        name: Build Binaries
+        uses: magefile/mage-action@v2
+        with:
+          args: buildbinariesdocker
+      - 
+        name: Result
+        run: |
+          ls bin/
+          
+
