--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           go-version: 1.20.0
       -
-        name: Install Go
+        name: Install Mage
         run: |
           git clone https://github.com/magefile/mage
           cd mage
@@ -25,7 +25,7 @@ jobs:
       - 
         name: Build Binary
         run: |
-          cp .env.example .env
+          cp .env.sample .env
           mage buildbinariesdocker
       - 
         name: Result
