--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,7 +11,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      -
+      - 
+        name: Info
+        run: git tag
+      -        
         name: Setup GO
         uses: actions/setup-go@v4
         with:
