--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,8 +25,8 @@ jobs:
       - 
         name: Build Binary
         run: |
-          cp .env.sample .env
-          mage build:binariesDocker
+          cp .env.sample .env          
+          CENTOS=1 mage build:binariesDocker
       - 
         name: Result
         run: |
