--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,7 +26,7 @@ jobs:
         name: Build Binary
         run: |
           cp .env.sample .env          
-          CENTOS=1 mage build:binariesDocker
+          mage view:env
       - 
         name: Result
         run: |
