--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -39,10 +39,13 @@ jobs:
           git clone https://github.com/magefile/mage
           cd mage
           go run bootstrap.go
+      - 
+        name: .Env
+        run: cp .env.sample .env
       # - 
       #   name: Build Centos Binary
       #   run: |
-      #     cp .env.sample .env          
+      #              
       #     CENTOS=1 mage build:binariesdocker
       # - 
       #   name: Test Go
